@@ -1,3 +1,10 @@
+1998-07-21  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
+
+	* QSort.m: Don't include stdlib.h.
+
+	* Archiver.m: Don't include collections/Map.h, strings.h, stdio.h,
+	or stdlib.h.
+
 1998-07-15  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
 	* ObjectSaver.m ([ObjectSaver -saveObject:]): Use getInteractiveFlag
